# mcp_beproduct

./: LICENSE  README.md  claude_desktop_config.json  pyproject.toml
examples/: test_client.py
mcp_beproduct/: __init__.py  server.py
tests/: test_server.py
