[project]
name = "mcp-beproduct"
version = "0.1.0"
description = "MCP server for Active Apparel Group product management"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Active Apparel Group" }
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-beproduct = "mcp_beproduct.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true